# font_organizer

./: .gitignore  LICENSE  README.md  cli.py  display.py  filesystem.py  font_organizer.py  grouper.py  metadata.py  organizer.py  pyproject.toml  requirements.txt  scanner.py  themes.py
.claude/: CLAUDE.md
docs/: usage.md
docs/plans/: implementation-plan.md  tui-plan.md
font_organizer/: __init__.py  __main__.py  cli.py  display.py  filesystem.py  metadata.py  organizer.py
scripts/: install.ps1  install.sh
