[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "font-organizer"
version = "1.0.0"
description = "Organize font files by font family name"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "fonttools>=4.0.0",
    "send2trash>=1.8.0",
    "brotli>=1.0.9",
    "rich>=13.0.0",
]

[project.scripts]
font-organizer = "font_organizer:main"

[tool.setuptools]
packages = ["font_organizer"]
